--- a/qhkch.ipynb
+++ b/qhkch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM+9UFLRBx+xzLgmRUYlbxg",
+      "authorship_tag": "ABX9TyNqUGoccPfLmWsvo11tpl4G",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,54 +28,67 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2r5DC4TKPrCY",
-        "outputId": "a93a2391-6fa5-4a39-f84d-ee5fe254abbc"
+        "outputId": "6f5c3fde-2382-4180-8cdc-5d796700b268"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Requirement already satisfied: google-colab-selenium[undetected] in /usr/local/lib/python3.10/dist-packages (1.0.10)\n",
-            "Requirement already satisfied: selenium in /usr/local/lib/python3.10/dist-packages (from google-colab-selenium[undetected]) (4.15.2)\n",
-            "Requirement already satisfied: undetected-chromedriver in /usr/local/lib/python3.10/dist-packages (from google-colab-selenium[undetected]) (3.5.4)\n",
+            "\u001b[33mWARNING: Package(s) not found: webdriver-manager\u001b[0m\u001b[33m\n",
+            "\u001b[0mCollecting google-colab-selenium[undetected]\n",
+            "  Downloading google_colab_selenium-1.0.10-py3-none-any.whl (8.0 kB)\n",
+            "Collecting selenium (from google-colab-selenium[undetected])\n",
+            "  Downloading selenium-4.15.2-py3-none-any.whl (10.2 MB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m59.1 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting undetected-chromedriver (from google-colab-selenium[undetected])\n",
+            "  Downloading undetected-chromedriver-3.5.4.tar.gz (65 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.4/65.4 kB\u001b[0m \u001b[31m8.7 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
             "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (2.0.7)\n",
-            "Requirement already satisfied: trio~=0.17 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (0.23.1)\n",
-            "Requirement already satisfied: trio-websocket~=0.9 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (0.11.1)\n",
+            "Collecting trio~=0.17 (from selenium->google-colab-selenium[undetected])\n",
+            "  Downloading trio-0.23.1-py3-none-any.whl (448 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m448.3/448.3 kB\u001b[0m \u001b[31m44.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hCollecting trio-websocket~=0.9 (from selenium->google-colab-selenium[undetected])\n",
+            "  Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
             "Requirement already satisfied: certifi>=2021.10.8 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (2023.11.17)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from undetected-chromedriver->google-colab-selenium[undetected]) (2.31.0)\n",
-            "Requirement already satisfied: websockets in /usr/local/lib/python3.10/dist-packages (from undetected-chromedriver->google-colab-selenium[undetected]) (12.0)\n",
-            "Requirement already satisfied: attrs>=20.1.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (23.1.0)\n",
+            "Collecting websockets (from undetected-chromedriver->google-colab-selenium[undetected])\n",
+            "  Downloading websockets-12.0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (130 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.2/130.2 kB\u001b[0m \u001b[31m17.4 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hRequirement already satisfied: attrs>=20.1.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (23.1.0)\n",
             "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (2.4.0)\n",
             "Requirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (3.6)\n",
-            "Requirement already satisfied: outcome in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.3.0.post0)\n",
+            "Collecting outcome (from trio~=0.17->selenium->google-colab-selenium[undetected])\n",
+            "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
             "Requirement already satisfied: sniffio>=1.3.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.3.0)\n",
             "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.2.0)\n",
-            "Requirement already satisfied: wsproto>=0.14 in /usr/local/lib/python3.10/dist-packages (from trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (1.2.0)\n",
+            "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium->google-colab-selenium[undetected])\n",
+            "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
             "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /usr/local/lib/python3.10/dist-packages (from urllib3[socks]<3,>=1.26->selenium->google-colab-selenium[undetected]) (1.7.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->undetected-chromedriver->google-colab-selenium[undetected]) (3.3.2)\n",
-            "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (0.14.0)\n",
-            "Name: webdriver-manager\n",
-            "Version: 4.0.1\n",
-            "Summary: Library provides the way to automatically manage drivers for different browsers\n",
-            "Home-page: https://github.com/SergeyPirogov/webdriver_manager\n",
-            "Author: Sergey Pirogov\n",
-            "Author-email: automationremarks@gmail.com\n",
-            "License: \n",
-            "Location: /usr/local/lib/python3.10/dist-packages\n",
-            "Requires: packaging, python-dotenv, requests\n",
-            "Required-by: \n"
+            "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected])\n",
+            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
+            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
+            "\u001b[?25hBuilding wheels for collected packages: undetected-chromedriver\n",
+            "  Building wheel for undetected-chromedriver (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "  Created wheel for undetected-chromedriver: filename=undetected_chromedriver-3.5.4-py3-none-any.whl size=47055 sha256=cf47d5d033d3561a62e9c11f05b755edcfaa7609990735fa1caaff875e53d8d2\n",
+            "  Stored in directory: /root/.cache/pip/wheels/0c/a6/72/5c948853baf75d52f1da173bd8fc9d7ad7615608e0ffaead6d\n",
+            "Successfully built undetected-chromedriver\n",
+            "Installing collected packages: websockets, outcome, h11, wsproto, trio, trio-websocket, selenium, undetected-chromedriver, google-colab-selenium\n",
+            "Successfully installed google-colab-selenium-1.0.10 h11-0.14.0 outcome-1.3.0.post0 selenium-4.15.2 trio-0.23.1 trio-websocket-0.11.1 undetected-chromedriver-3.5.4 websockets-12.0 wsproto-1.2.0\n"
           ]
         }
       ],
       "source": [
-        "%pip install google-colab-selenium[undetected]\n",
-        "!pip show webdriver-manager"
+        "!pip show webdriver-manager\n",
+        "%pip install google-colab-selenium[undetected]"
       ]
     },
     {
@@ -92,7 +105,7 @@
       "metadata": {
         "id": "gaqHshRTQmgh"
       },
-      "execution_count": 28,
+      "execution_count": 2,
       "outputs": []
     },
     {
@@ -108,12 +121,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 38
+          "height": 59
         },
         "id": "JsDdOg3EtDCW",
-        "outputId": "05379ff4-6ed6-4c85-a386-fd92d0c1e821"
+        "outputId": "47fe7a25-b46d-4706-caff-d1317e5a6e8d"
       },
-      "execution_count": 29,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "display_data",
@@ -124,8 +137,8 @@
             "text/html": [
               "\n",
               "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"7db5fb4d-7924-4101-9422-385ec0c85789-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"7db5fb4d-7924-4101-9422-385ec0c85789-text\">Initializing Chromedriver</div>\n",
+              "                <div class=\"spinner\" id=\"6c4f8cc9-bcf1-41c4-b2ff-1ad915de3141-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"6c4f8cc9-bcf1-41c4-b2ff-1ad915de3141-text\">Downloading Google Chrome</div>\n",
               "            </div>\n",
               "            <style>\n",
               "                @keyframes spin {\n",
@@ -165,11 +178,72 @@
             ],
             "application/javascript": [
               "\n",
-              "            const element = document.getElementById(\"7db5fb4d-7924-4101-9422-385ec0c85789-circle\");\n",
+              "            const element = document.getElementById(\"6c4f8cc9-bcf1-41c4-b2ff-1ad915de3141-circle\");\n",
               "            element.style.border = \"3px solid limegreen\";\n",
               "            element.style.animation = \"none\";\n",
               "\n",
-              "            const text = document.getElementById(\"7db5fb4d-7924-4101-9422-385ec0c85789-text\");\n",
+              "            const text = document.getElementById(\"6c4f8cc9-bcf1-41c4-b2ff-1ad915de3141-text\");\n",
+              "            text.innerText = \"Downloaded Google Chrome\";\n",
+              "        "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.HTML object>"
+            ],
+            "text/html": [
+              "\n",
+              "            <div class=\"spinner-container\">\n",
+              "                <div class=\"spinner\" id=\"999215e5-d44f-4480-b0e3-8913c1195ef8-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"999215e5-d44f-4480-b0e3-8913c1195ef8-text\">Initializing Chromedriver</div>\n",
+              "            </div>\n",
+              "            <style>\n",
+              "                @keyframes spin {\n",
+              "                    from { transform: rotate(0deg); }\n",
+              "                    to { transform: rotate(360deg); }\n",
+              "                }\n",
+              "\n",
+              "                .spinner-container {\n",
+              "                    display: flex;\n",
+              "                    align-items: center;\n",
+              "                    margin-bottom: 3px;\n",
+              "                }\n",
+              "\n",
+              "                .spinner {\n",
+              "                    border: 3px solid rgba(0, 0, 0, 0.1);\n",
+              "                    border-left-color: lightblue;\n",
+              "                    border-radius: 50%;\n",
+              "                    width: 12px;\n",
+              "                    height: 12px;\n",
+              "                    animation: spin 1s linear infinite;\n",
+              "                }\n",
+              "\n",
+              "                .spinner-text {\n",
+              "                    padding-left: 6px;\n",
+              "                }\n",
+              "            </style>\n",
+              "        "
+            ]
+          },
+          "metadata": {}
+        },
+        {
+          "output_type": "display_data",
+          "data": {
+            "text/plain": [
+              "<IPython.core.display.Javascript object>"
+            ],
+            "application/javascript": [
+              "\n",
+              "            const element = document.getElementById(\"999215e5-d44f-4480-b0e3-8913c1195ef8-circle\");\n",
+              "            element.style.border = \"3px solid limegreen\";\n",
+              "            element.style.animation = \"none\";\n",
+              "\n",
+              "            const text = document.getElementById(\"999215e5-d44f-4480-b0e3-8913c1195ef8-text\");\n",
               "            text.innerText = \"Initialized Chromedriver\";\n",
               "        "
             ]
@@ -342,7 +416,7 @@
       "metadata": {
         "id": "Cop_VZwWQr1Q"
       },
-      "execution_count": 30,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -375,7 +449,7 @@
       "metadata": {
         "id": "eLMMgaDesIez"
       },
-      "execution_count": 31,
+      "execution_count": 5,
       "outputs": []
     },
     {
@@ -387,12 +461,12 @@
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 56
+          "height": 76
         },
         "id": "Li1rdPODUFdC",
-        "outputId": "cbc68ecb-7ec7-4608-ffe8-9c89e97b3560"
+        "outputId": "9e5ffd2b-09a6-40fb-8a89-6a19223bb552"
       },
-      "execution_count": 33,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "display_data",
@@ -403,8 +477,8 @@
             "text/html": [
               "\n",
               "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"4c0eaa47-15bf-4feb-ba25-6008d7ca6789-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"4c0eaa47-15bf-4feb-ba25-6008d7ca6789-text\">Initializing Chromedriver</div>\n",
+              "                <div class=\"spinner\" id=\"825f7d7b-8581-422c-8e5a-6a989febd0d8-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"825f7d7b-8581-422c-8e5a-6a989febd0d8-text\">Initializing Chromedriver</div>\n",
               "            </div>\n",
               "            <style>\n",
               "                @keyframes spin {\n",
@@ -444,11 +518,11 @@
             ],
             "application/javascript": [
               "\n",
-              "            const element = document.getElementById(\"4c0eaa47-15bf-4feb-ba25-6008d7ca6789-circle\");\n",
+              "            const element = document.getElementById(\"825f7d7b-8581-422c-8e5a-6a989febd0d8-circle\");\n",
               "            element.style.border = \"3px solid limegreen\";\n",
               "            element.style.animation = \"none\";\n",
               "\n",
-              "            const text = document.getElementById(\"4c0eaa47-15bf-4feb-ba25-6008d7ca6789-text\");\n",
+              "            const text = document.getElementById(\"825f7d7b-8581-422c-8e5a-6a989febd0d8-text\");\n",
               "            text.innerText = \"Initialized Chromedriver\";\n",
               "        "
             ]
@@ -459,7 +533,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{}\n"
+            "{'EB': '中空', 'JM': '弱多', 'PG': '中空', 'IF': '中空', 'A': '强空', 'BU': '弱空', 'TS': '中性', 'AL': '中性', 'EG': '强空', 'LH': '强空', 'AU': '弱空', 'SP': '中空', 'TA': '中空', 'V': '强空', 'FU': '弱空', 'RB': '弱多', 'SA': '中多', 'B': '中性', 'PX': '中性', 'PB': '中空', 'BC': '弱多', 'UR': '弱多', 'P': '中空', 'AP': '中性', 'OI': '中空', 'SR': '弱空', 'JD': '中空', '低硫油': '弱空', 'SM': '中空', 'J': '弱空', 'PP': '中空', 'TF': '中性', 'MA': '中空', 'CJ': '中性', 'RU': '弱空', 'SS': '中空', 'IH': '强空', 'I': '弱多', 'LC': '中空', 'RM': '弱空', 'M': '中性', '氧化铝': '中空', '20号胶': '中空', 'Y': '弱空', 'C': '弱空', 'IC': '中空', 'L': '中空', 'PF': '弱空', 'CS': '弱空', 'SC': '弱空', 'ZN': '中空', 'IM': '中空', 'CF': '中空', 'EC': '中空', 'SH': '中空', 'CU': '中性', '热卷': '弱空', 'FG': '中空', 'PK': '中空', 'SF': '中空', 'AG': '中性', 'SN': '中空', 'NI': '中空', 'RR': '弱空'}\n"
           ]
         }
       ]
