使用 Colaboratory 创建

--- a/qhkch.ipynb
+++ b/qhkch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyNdK7rYcmzbSzxTqhWS5zal",
+      "authorship_tag": "ABX9TyMXoZrRNZAxuYRNzpX2gkHW",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,67 +28,48 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 27,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2r5DC4TKPrCY",
-        "outputId": "b9fcee8b-6b77-48a1-bb66-73a86ed61d5a"
+        "outputId": "38f1ddf2-ee6c-4059-ef7d-b3de35aa7919"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "\u001b[33mWARNING: Package(s) not found: webdriver-manager\u001b[0m\u001b[33m\n",
-            "\u001b[0mCollecting google-colab-selenium[undetected]\n",
-            "  Downloading google_colab_selenium-1.0.10-py3-none-any.whl (8.0 kB)\n",
-            "Collecting selenium (from google-colab-selenium[undetected])\n",
-            "  Downloading selenium-4.15.2-py3-none-any.whl (10.2 MB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m10.2/10.2 MB\u001b[0m \u001b[31m16.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting undetected-chromedriver (from google-colab-selenium[undetected])\n",
-            "  Downloading undetected-chromedriver-3.5.4.tar.gz (65 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m65.4/65.4 kB\u001b[0m \u001b[31m6.8 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25h  Preparing metadata (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
+            "Requirement already satisfied: google-colab-selenium[undetected] in /usr/local/lib/python3.10/dist-packages (1.0.10)\n",
+            "Requirement already satisfied: selenium in /usr/local/lib/python3.10/dist-packages (from google-colab-selenium[undetected]) (4.15.2)\n",
+            "Requirement already satisfied: undetected-chromedriver in /usr/local/lib/python3.10/dist-packages (from google-colab-selenium[undetected]) (3.5.4)\n",
             "Requirement already satisfied: urllib3[socks]<3,>=1.26 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (2.0.7)\n",
-            "Collecting trio~=0.17 (from selenium->google-colab-selenium[undetected])\n",
-            "  Downloading trio-0.23.1-py3-none-any.whl (448 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m448.3/448.3 kB\u001b[0m \u001b[31m32.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hCollecting trio-websocket~=0.9 (from selenium->google-colab-selenium[undetected])\n",
-            "  Downloading trio_websocket-0.11.1-py3-none-any.whl (17 kB)\n",
+            "Requirement already satisfied: trio~=0.17 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (0.23.1)\n",
+            "Requirement already satisfied: trio-websocket~=0.9 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (0.11.1)\n",
             "Requirement already satisfied: certifi>=2021.10.8 in /usr/local/lib/python3.10/dist-packages (from selenium->google-colab-selenium[undetected]) (2023.11.17)\n",
             "Requirement already satisfied: requests in /usr/local/lib/python3.10/dist-packages (from undetected-chromedriver->google-colab-selenium[undetected]) (2.31.0)\n",
-            "Collecting websockets (from undetected-chromedriver->google-colab-selenium[undetected])\n",
-            "  Downloading websockets-12.0-cp310-cp310-manylinux_2_5_x86_64.manylinux1_x86_64.manylinux_2_17_x86_64.manylinux2014_x86_64.whl (130 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m130.2/130.2 kB\u001b[0m \u001b[31m15.6 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hRequirement already satisfied: attrs>=20.1.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (23.1.0)\n",
+            "Requirement already satisfied: websockets in /usr/local/lib/python3.10/dist-packages (from undetected-chromedriver->google-colab-selenium[undetected]) (12.0)\n",
+            "Requirement already satisfied: attrs>=20.1.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (23.1.0)\n",
             "Requirement already satisfied: sortedcontainers in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (2.4.0)\n",
             "Requirement already satisfied: idna in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (3.6)\n",
-            "Collecting outcome (from trio~=0.17->selenium->google-colab-selenium[undetected])\n",
-            "  Downloading outcome-1.3.0.post0-py2.py3-none-any.whl (10 kB)\n",
+            "Requirement already satisfied: outcome in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.3.0.post0)\n",
             "Requirement already satisfied: sniffio>=1.3.0 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.3.0)\n",
             "Requirement already satisfied: exceptiongroup>=1.0.0rc9 in /usr/local/lib/python3.10/dist-packages (from trio~=0.17->selenium->google-colab-selenium[undetected]) (1.2.0)\n",
-            "Collecting wsproto>=0.14 (from trio-websocket~=0.9->selenium->google-colab-selenium[undetected])\n",
-            "  Downloading wsproto-1.2.0-py3-none-any.whl (24 kB)\n",
+            "Requirement already satisfied: wsproto>=0.14 in /usr/local/lib/python3.10/dist-packages (from trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (1.2.0)\n",
             "Requirement already satisfied: pysocks!=1.5.7,<2.0,>=1.5.6 in /usr/local/lib/python3.10/dist-packages (from urllib3[socks]<3,>=1.26->selenium->google-colab-selenium[undetected]) (1.7.1)\n",
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->undetected-chromedriver->google-colab-selenium[undetected]) (3.3.2)\n",
-            "Collecting h11<1,>=0.9.0 (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected])\n",
-            "  Downloading h11-0.14.0-py3-none-any.whl (58 kB)\n",
-            "\u001b[2K     \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m58.3/58.3 kB\u001b[0m \u001b[31m6.9 MB/s\u001b[0m eta \u001b[36m0:00:00\u001b[0m\n",
-            "\u001b[?25hBuilding wheels for collected packages: undetected-chromedriver\n",
-            "  Building wheel for undetected-chromedriver (setup.py) ... \u001b[?25l\u001b[?25hdone\n",
-            "  Created wheel for undetected-chromedriver: filename=undetected_chromedriver-3.5.4-py3-none-any.whl size=47055 sha256=ac426fe46581603f0bb47a116c7607c79dc58701d6c742ed69991107227bfb60\n",
-            "  Stored in directory: /root/.cache/pip/wheels/0c/a6/72/5c948853baf75d52f1da173bd8fc9d7ad7615608e0ffaead6d\n",
-            "Successfully built undetected-chromedriver\n",
-            "Installing collected packages: websockets, outcome, h11, wsproto, trio, trio-websocket, selenium, undetected-chromedriver, google-colab-selenium\n",
-            "Successfully installed google-colab-selenium-1.0.10 h11-0.14.0 outcome-1.3.0.post0 selenium-4.15.2 trio-0.23.1 trio-websocket-0.11.1 undetected-chromedriver-3.5.4 websockets-12.0 wsproto-1.2.0\n"
+            "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (0.14.0)\n",
+            "\u001b[33mWARNING: Package(s) not found: webdriver-manager\u001b[0m\u001b[33m\n",
+            "\u001b[0mRequirement already satisfied: redis in /usr/local/lib/python3.10/dist-packages (5.0.1)\n",
+            "Requirement already satisfied: async-timeout>=4.0.2 in /usr/local/lib/python3.10/dist-packages (from redis) (4.0.3)\n"
           ]
         }
       ],
       "source": [
+        "!pip install google-colab-selenium[undetected]\n",
         "!pip show webdriver-manager\n",
-        "%pip install google-colab-selenium[undetected]"
+        "!pip install redis"
       ]
     },
     {
@@ -100,12 +81,14 @@
         "from selenium.webdriver.common.keys import Keys\n",
         "from selenium.webdriver.support import expected_conditions as EC\n",
         "from selenium.webdriver.support.wait import WebDriverWait\n",
-        "import time"
+        "import time\n",
+        "import redis\n",
+        "import json"
       ],
       "metadata": {
         "id": "gaqHshRTQmgh"
       },
-      "execution_count": 2,
+      "execution_count": 28,
       "outputs": []
     },
     {
@@ -204,6 +187,8 @@
         "    return 'SN'\n",
         "  if(i.find('郑煤')!=-1):\n",
         "    return 'ZC'\n",
+        "  if(i.find('低硫油')!=-1):\n",
+        "    return 'LU'\n",
         "  if(i.find('低硫燃油')!=-1):\n",
         "    return 'LU'\n",
         "  if(i.find('沪镍')!=-1):\n",
@@ -272,7 +257,7 @@
       "metadata": {
         "id": "Cop_VZwWQr1Q"
       },
-      "execution_count": 3,
+      "execution_count": 29,
       "outputs": []
     },
     {
@@ -305,24 +290,58 @@
       "metadata": {
         "id": "eLMMgaDesIez"
       },
-      "execution_count": 4,
+      "execution_count": 30,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "dic=get_qhkchlongandshort_qkgy()\n",
-        "print(dic)"
+        "#pattern 0:PUBSUB模式，1：STREAM模式\n",
+        "def sendredid(pattern,data):\n",
+        "  host = 'redis-12969.c1.ap-southeast-1-1.ec2.cloud.redislabs.com'\n",
+        "  port = 12969\n",
+        "  password = 'FEN0FcTv4FSKxjjMzUmAdmhMbgRthNqw'\n",
+        "  channelname='qhkch'\n",
+        "  try:\n",
+        "    pool = redis.ConnectionPool(host=host,port=port,password=password)\n",
+        "    rds = redis.Redis(connection_pool=pool)\n",
+        "    rds.auto_close_connection_pool = True\n",
+        "    if pattern == 0:  # 0:PUBSUB模式，1：STREAM模式\n",
+        "      rds.publish(channelname, json.dumps(data))\n",
+        "    else:\n",
+        "      rds.xadd(channelname, data, maxlen=200)\n",
+        "    rds.connection_pool.disconnect()\n",
+        "    print('rds work ok!')\n",
+        "  except Exception as e:\n",
+        "    print(e)\n"
       ],
       "metadata": {
+        "id": "__FaDyC1cH6o"
+      },
+      "execution_count": 31,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "data=get_qhkchlongandshort_qkgy()\n",
+        "#pattern=0 #对应聚宽：Redis的PubSub模式(qhkch0)\n",
+        "pattern=1 #对应聚宽：Redis的PubSub模式(qhkch1)\n",
+        "print(data)\n",
+        "if(len(data)==0):\n",
+        "  print('get_qhkchlongandshort_qkgy 获取失败')\n",
+        "else:\n",
+        "  sendredid(pattern,data)\n"
+      ],
+      "metadata": {
+        "id": "Ujo_J-Zrd3We",
+        "outputId": "8d940c93-9159-4cec-e7e3-a13b1b729e6a",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 97
-        },
-        "id": "Li1rdPODUFdC",
-        "outputId": "5e2dd0a2-f715-453d-83c1-758b2176c6ab"
+          "height": 95
+        }
       },
-      "execution_count": 5,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "display_data",
@@ -333,8 +352,8 @@
             "text/html": [
               "\n",
               "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"ad1d0224-7288-4be4-a5ad-7285125e7b88-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"ad1d0224-7288-4be4-a5ad-7285125e7b88-text\">Downloading Google Chrome</div>\n",
+              "                <div class=\"spinner\" id=\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-text\">Initializing Chromedriver</div>\n",
               "            </div>\n",
               "            <style>\n",
               "                @keyframes spin {\n",
@@ -374,72 +393,11 @@
             ],
             "application/javascript": [
               "\n",
-              "            const element = document.getElementById(\"ad1d0224-7288-4be4-a5ad-7285125e7b88-circle\");\n",
+              "            const element = document.getElementById(\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-circle\");\n",
               "            element.style.border = \"3px solid limegreen\";\n",
               "            element.style.animation = \"none\";\n",
               "\n",
-              "            const text = document.getElementById(\"ad1d0224-7288-4be4-a5ad-7285125e7b88-text\");\n",
-              "            text.innerText = \"Downloaded Google Chrome\";\n",
-              "        "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.HTML object>"
-            ],
-            "text/html": [
-              "\n",
-              "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"51d46c84-95c4-439e-a4ea-e9928378d177-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"51d46c84-95c4-439e-a4ea-e9928378d177-text\">Initializing Chromedriver</div>\n",
-              "            </div>\n",
-              "            <style>\n",
-              "                @keyframes spin {\n",
-              "                    from { transform: rotate(0deg); }\n",
-              "                    to { transform: rotate(360deg); }\n",
-              "                }\n",
-              "\n",
-              "                .spinner-container {\n",
-              "                    display: flex;\n",
-              "                    align-items: center;\n",
-              "                    margin-bottom: 3px;\n",
-              "                }\n",
-              "\n",
-              "                .spinner {\n",
-              "                    border: 3px solid rgba(0, 0, 0, 0.1);\n",
-              "                    border-left-color: lightblue;\n",
-              "                    border-radius: 50%;\n",
-              "                    width: 12px;\n",
-              "                    height: 12px;\n",
-              "                    animation: spin 1s linear infinite;\n",
-              "                }\n",
-              "\n",
-              "                .spinner-text {\n",
-              "                    padding-left: 6px;\n",
-              "                }\n",
-              "            </style>\n",
-              "        "
-            ]
-          },
-          "metadata": {}
-        },
-        {
-          "output_type": "display_data",
-          "data": {
-            "text/plain": [
-              "<IPython.core.display.Javascript object>"
-            ],
-            "application/javascript": [
-              "\n",
-              "            const element = document.getElementById(\"51d46c84-95c4-439e-a4ea-e9928378d177-circle\");\n",
-              "            element.style.border = \"3px solid limegreen\";\n",
-              "            element.style.animation = \"none\";\n",
-              "\n",
-              "            const text = document.getElementById(\"51d46c84-95c4-439e-a4ea-e9928378d177-text\");\n",
+              "            const text = document.getElementById(\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-text\");\n",
               "            text.innerText = \"Initialized Chromedriver\";\n",
               "        "
             ]
@@ -450,7 +408,8 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'MA': '中空', 'BC': '弱多', 'FU': '弱空', 'A': '强空', 'C': '弱空', 'RB': '弱多', 'TA': '中空', 'EB': '中空', 'CF': '中空', '热卷': '弱空', 'JD': '中空', 'CJ': '弱空', 'BU': '弱空', 'SP': '中空', 'PK': '中空', '20号胶': '中空', 'OI': '中空', 'SS': '中空', 'SC': '弱空', 'ZN': '中空', 'SR': '弱空', 'P': '中空', 'SM': '中空', 'RM': '弱空', 'M': '中性', '低硫油': '弱空', 'UR': '弱多', 'IF': '中空', 'CU': '中性', 'SA': '中多', 'PX': '中性', 'PP': '中空', 'L': '中空', 'RU': '弱空', 'AU': '弱空', 'TS': '中性', 'SH': '中空', 'PG': '中空', 'FG': '中空', 'EC': '中空', 'SN': '中空', 'PF': '弱空', 'NI': '中空', 'AL': '中性', '氧化铝': '中空', 'IH': '强空', 'JM': '弱多', 'RR': '中空', 'IM': '中空', 'Y': '弱空', 'AP': '弱空', 'IC': '中空', 'TF': '中性', 'LH': '强空', 'SF': '中空', 'LC': '中空', 'CS': '中空', 'PB': '中空', 'V': '强空', 'B': '中性', 'I': '弱多', 'J': '中空', 'AG': '中性', 'EG': '强空'}\n"
+            "{'J': '弱空', 'JD': '弱空', 'IH': '中空', 'LH': '中空', 'RU': '强空', 'PK': '中空', 'EC': '中性', 'LU': '弱空', 'M': '弱空', 'MA': '中空', 'TS': '弱空', '氧化铝': '中空', 'AL': '弱空', '热卷': '弱空', 'RM': '弱空', 'CS': '中空', 'SC': '弱空', 'SR': '弱空', 'PF': '弱空', 'CJ': '弱空', 'B': '中性', 'RB': '弱多', 'TA': '中空', 'SS': '中空', 'ZN': '中空', 'V': '强空', 'LC': '中空', 'FU': '弱空', 'IM': '中空', 'SF': '中空', 'SP': '中空', '20号胶': '中空', 'CF': '中空', 'AP': '弱空', 'NI': '中空', 'IF': '中空', 'EG': '强空', 'Y': '弱空', 'RR': '中空', 'FG': '中性', 'AU': '中性', 'EB': '弱空', 'P': '弱空', 'A': '中空', 'BU': '弱空', 'C': '中空', 'PP': '中空', 'SN': '中空', 'OI': '强空', 'SH': '中空', 'TF': '中性', 'SM': '中空', 'AG': '中性', 'SA': '中多', 'PB': '中空', 'I': '弱多', 'PG': '中空', 'IC': '弱空', 'UR': '中性', 'JM': '弱多', 'L': '中空', 'PX': '中性', 'CU': '中性', 'BC': '中性'}\n",
+            "rds work ok!\n"
           ]
         }
       ]
