--- a/qhkch.ipynb
+++ b/qhkch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMXoZrRNZAxuYRNzpX2gkHW",
+      "authorship_tag": "ABX9TyPo/7uAXDH/WafRBG3QwEGa",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,13 +28,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 27,
+      "execution_count": 36,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2r5DC4TKPrCY",
-        "outputId": "38f1ddf2-ee6c-4059-ef7d-b3de35aa7919"
+        "outputId": "6d174dbb-05f0-484f-a91d-4255cefca532"
       },
       "outputs": [
         {
@@ -61,15 +61,14 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->undetected-chromedriver->google-colab-selenium[undetected]) (3.3.2)\n",
             "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (0.14.0)\n",
             "\u001b[33mWARNING: Package(s) not found: webdriver-manager\u001b[0m\u001b[33m\n",
-            "\u001b[0mRequirement already satisfied: redis in /usr/local/lib/python3.10/dist-packages (5.0.1)\n",
-            "Requirement already satisfied: async-timeout>=4.0.2 in /usr/local/lib/python3.10/dist-packages (from redis) (4.0.3)\n"
+            "\u001b[0m"
           ]
         }
       ],
       "source": [
         "!pip install google-colab-selenium[undetected]\n",
         "!pip show webdriver-manager\n",
-        "!pip install redis"
+        "#!pip install redis"
       ]
     },
     {
@@ -88,7 +87,7 @@
       "metadata": {
         "id": "gaqHshRTQmgh"
       },
-      "execution_count": 28,
+      "execution_count": 37,
       "outputs": []
     },
     {
@@ -257,7 +256,7 @@
       "metadata": {
         "id": "Cop_VZwWQr1Q"
       },
-      "execution_count": 29,
+      "execution_count": 38,
       "outputs": []
     },
     {
@@ -273,7 +272,7 @@
         "    wait.until(EC.presence_of_element_located((By.ID,'footer_marquee')))\n",
         "    element=browser.find_element(By.ID, \"footer_marquee\")\n",
         "    content=element.get_attribute('innerText')\n",
-        "    list0=content.strip().split('%\\n')\n",
+        "    list0=content.replace('乾坤归一综合评级（本数据仅供参考，不构成投资建议）','').strip().split('%\\n')\n",
         "    for i in list0:\n",
         "      list1=i.strip().split(' ')\n",
         "      if len(list1)<2 or len(list1[0])<4 or len(list1[1])<2:\n",
@@ -290,7 +289,7 @@
       "metadata": {
         "id": "eLMMgaDesIez"
       },
-      "execution_count": 30,
+      "execution_count": 39,
       "outputs": []
     },
     {
@@ -309,7 +308,7 @@
         "    if pattern == 0:  # 0:PUBSUB模式，1：STREAM模式\n",
         "      rds.publish(channelname, json.dumps(data))\n",
         "    else:\n",
-        "      rds.xadd(channelname, data, maxlen=200)\n",
+        "      rds.xadd(channelname, data, maxlen=10)\n",
         "    rds.connection_pool.disconnect()\n",
         "    print('rds work ok!')\n",
         "  except Exception as e:\n",
@@ -318,7 +317,7 @@
       "metadata": {
         "id": "__FaDyC1cH6o"
       },
-      "execution_count": 31,
+      "execution_count": 40,
       "outputs": []
     },
     {
@@ -331,17 +330,18 @@
         "if(len(data)==0):\n",
         "  print('get_qhkchlongandshort_qkgy 获取失败')\n",
         "else:\n",
-        "  sendredid(pattern,data)\n"
+        "  sendredid(pattern,data)\n",
+        "\n"
       ],
       "metadata": {
         "id": "Ujo_J-Zrd3We",
-        "outputId": "8d940c93-9159-4cec-e7e3-a13b1b729e6a",
+        "outputId": "a52b8e0d-2653-417d-bab0-00641c12796c",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 95
         }
       },
-      "execution_count": 34,
+      "execution_count": 43,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,8 +352,8 @@
             "text/html": [
               "\n",
               "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-text\">Initializing Chromedriver</div>\n",
+              "                <div class=\"spinner\" id=\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-text\">Initializing Chromedriver</div>\n",
               "            </div>\n",
               "            <style>\n",
               "                @keyframes spin {\n",
@@ -393,11 +393,11 @@
             ],
             "application/javascript": [
               "\n",
-              "            const element = document.getElementById(\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-circle\");\n",
+              "            const element = document.getElementById(\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-circle\");\n",
               "            element.style.border = \"3px solid limegreen\";\n",
               "            element.style.animation = \"none\";\n",
               "\n",
-              "            const text = document.getElementById(\"8c8ac55c-e613-48ed-aef5-5f892ec0da4b-text\");\n",
+              "            const text = document.getElementById(\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-text\");\n",
               "            text.innerText = \"Initialized Chromedriver\";\n",
               "        "
             ]
@@ -408,7 +408,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'J': '弱空', 'JD': '弱空', 'IH': '中空', 'LH': '中空', 'RU': '强空', 'PK': '中空', 'EC': '中性', 'LU': '弱空', 'M': '弱空', 'MA': '中空', 'TS': '弱空', '氧化铝': '中空', 'AL': '弱空', '热卷': '弱空', 'RM': '弱空', 'CS': '中空', 'SC': '弱空', 'SR': '弱空', 'PF': '弱空', 'CJ': '弱空', 'B': '中性', 'RB': '弱多', 'TA': '中空', 'SS': '中空', 'ZN': '中空', 'V': '强空', 'LC': '中空', 'FU': '弱空', 'IM': '中空', 'SF': '中空', 'SP': '中空', '20号胶': '中空', 'CF': '中空', 'AP': '弱空', 'NI': '中空', 'IF': '中空', 'EG': '强空', 'Y': '弱空', 'RR': '中空', 'FG': '中性', 'AU': '中性', 'EB': '弱空', 'P': '弱空', 'A': '中空', 'BU': '弱空', 'C': '中空', 'PP': '中空', 'SN': '中空', 'OI': '强空', 'SH': '中空', 'TF': '中性', 'SM': '中空', 'AG': '中性', 'SA': '中多', 'PB': '中空', 'I': '弱多', 'PG': '中空', 'IC': '弱空', 'UR': '中性', 'JM': '弱多', 'L': '中空', 'PX': '中性', 'CU': '中性', 'BC': '中性'}\n",
+            "{'PG': '弱空', 'PB': '中空', 'TA': '弱空', 'IF': '中空', 'SF': '中空', 'AP': '弱空', 'CU': '弱空', 'SR': '弱空', '热卷': '弱空', 'EB': '弱空', 'TF': '中性', 'IM': '中空', 'NI': '弱空', 'RR': '弱空', 'C': '中空', 'Y': '弱空', 'JD': '弱空', 'V': '强空', 'CS': '弱空', 'BU': '弱空', 'SM': '中空', 'EG': '中空', 'UR': '弱多', 'IC': '弱空', 'JM': '弱多', 'PP': '中空', 'SN': '弱空', '氧化铝': '弱空', 'CJ': '弱空', 'OI': '中空', 'M': '弱空', 'AU': '弱空', 'RB': '中性', 'CF': '弱空', 'A': '中空', 'LU': '弱多', 'AG': '弱多', 'RU': '强空', '20号胶': '中空', 'LC': '中空', 'L': '中空', 'PX': '弱多', 'B': '中性', 'FU': '弱空', 'J': '中性', 'TS': '弱空', 'PK': '中空', 'ZN': '中空', 'BC': '弱空', 'AL': '中性', 'SC': '中性', 'RM': '弱空', 'I': '弱多', 'SH': '弱空', 'PF': '弱空', 'IH': '中空', 'FG': '弱空', 'SP': '中空', 'P': '弱空', 'MA': '弱空', 'SS': '中空', 'EC': '中性', 'LH': '中空'}\n",
             "rds work ok!\n"
           ]
         }
