使用 Colaboratory 创建

--- a/qhkch.ipynb
+++ b/qhkch.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPo/7uAXDH/WafRBG3QwEGa",
+      "authorship_tag": "ABX9TyMBFxfpAzOVq2ctoMj4UGIk",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,18 +23,18 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/626170998/ColabScript/blob/master/qhkch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/626170998/PublicColabScript/blob/master/qhkch.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
       "cell_type": "code",
-      "execution_count": 36,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "2r5DC4TKPrCY",
-        "outputId": "6d174dbb-05f0-484f-a91d-4255cefca532"
+        "outputId": "16888eac-83cb-4316-cc74-269c21f2043f"
       },
       "outputs": [
         {
@@ -61,14 +61,15 @@
             "Requirement already satisfied: charset-normalizer<4,>=2 in /usr/local/lib/python3.10/dist-packages (from requests->undetected-chromedriver->google-colab-selenium[undetected]) (3.3.2)\n",
             "Requirement already satisfied: h11<1,>=0.9.0 in /usr/local/lib/python3.10/dist-packages (from wsproto>=0.14->trio-websocket~=0.9->selenium->google-colab-selenium[undetected]) (0.14.0)\n",
             "\u001b[33mWARNING: Package(s) not found: webdriver-manager\u001b[0m\u001b[33m\n",
-            "\u001b[0m"
+            "\u001b[0mRequirement already satisfied: redis in /usr/local/lib/python3.10/dist-packages (5.0.1)\n",
+            "Requirement already satisfied: async-timeout>=4.0.2 in /usr/local/lib/python3.10/dist-packages (from redis) (4.0.3)\n"
           ]
         }
       ],
       "source": [
         "!pip install google-colab-selenium[undetected]\n",
         "!pip show webdriver-manager\n",
-        "#!pip install redis"
+        "!pip install redis"
       ]
     },
     {
@@ -87,7 +88,7 @@
       "metadata": {
         "id": "gaqHshRTQmgh"
       },
-      "execution_count": 37,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -256,7 +257,7 @@
       "metadata": {
         "id": "Cop_VZwWQr1Q"
       },
-      "execution_count": 38,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -289,14 +290,13 @@
       "metadata": {
         "id": "eLMMgaDesIez"
       },
-      "execution_count": 39,
+      "execution_count": 12,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "#pattern 0:PUBSUB模式，1：STREAM模式\n",
-        "def sendredid(pattern,data):\n",
+        "def sendredid(data):\n",
         "  host = 'redis-12969.c1.ap-southeast-1-1.ec2.cloud.redislabs.com'\n",
         "  port = 12969\n",
         "  password = 'FEN0FcTv4FSKxjjMzUmAdmhMbgRthNqw'\n",
@@ -305,43 +305,50 @@
         "    pool = redis.ConnectionPool(host=host,port=port,password=password)\n",
         "    rds = redis.Redis(connection_pool=pool)\n",
         "    rds.auto_close_connection_pool = True\n",
-        "    if pattern == 0:  # 0:PUBSUB模式，1：STREAM模式\n",
-        "      rds.publish(channelname, json.dumps(data))\n",
-        "    else:\n",
-        "      rds.xadd(channelname, data, maxlen=10)\n",
+        "    rds.set(channelname,json.dumps(data))\n",
         "    rds.connection_pool.disconnect()\n",
-        "    print('rds work ok!')\n",
+        "    #print('rds work ok!')\n",
         "  except Exception as e:\n",
         "    print(e)\n"
       ],
       "metadata": {
         "id": "__FaDyC1cH6o"
       },
-      "execution_count": 40,
+      "execution_count": 13,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "sendredid({'1':'1','2':'2'})\n",
+        "sendredid([1,2,3,4,5])"
+      ],
+      "metadata": {
+        "id": "keE5US5OnfoZ"
+      },
+      "execution_count": 14,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
         "data=get_qhkchlongandshort_qkgy()\n",
-        "#pattern=0 #对应聚宽：Redis的PubSub模式(qhkch0)\n",
-        "pattern=1 #对应聚宽：Redis的PubSub模式(qhkch1)\n",
         "print(data)\n",
         "if(len(data)==0):\n",
         "  print('get_qhkchlongandshort_qkgy 获取失败')\n",
         "else:\n",
-        "  sendredid(pattern,data)\n",
+        "  sendredid(data)\n",
         "\n"
       ],
       "metadata": {
         "id": "Ujo_J-Zrd3We",
-        "outputId": "a52b8e0d-2653-417d-bab0-00641c12796c",
+        "outputId": "57b414b7-de2f-47c8-caa2-a9494156e2cc",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 95
+          "height": 76
         }
       },
-      "execution_count": 43,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "display_data",
@@ -352,8 +359,8 @@
             "text/html": [
               "\n",
               "            <div class=\"spinner-container\">\n",
-              "                <div class=\"spinner\" id=\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-circle\"></div>\n",
-              "                <div class=\"spinner-text\" id=\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-text\">Initializing Chromedriver</div>\n",
+              "                <div class=\"spinner\" id=\"c6c8d5f4-a978-4a6a-ac10-8f49fc0f2244-circle\"></div>\n",
+              "                <div class=\"spinner-text\" id=\"c6c8d5f4-a978-4a6a-ac10-8f49fc0f2244-text\">Initializing Chromedriver</div>\n",
               "            </div>\n",
               "            <style>\n",
               "                @keyframes spin {\n",
@@ -393,11 +400,11 @@
             ],
             "application/javascript": [
               "\n",
-              "            const element = document.getElementById(\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-circle\");\n",
+              "            const element = document.getElementById(\"c6c8d5f4-a978-4a6a-ac10-8f49fc0f2244-circle\");\n",
               "            element.style.border = \"3px solid limegreen\";\n",
               "            element.style.animation = \"none\";\n",
               "\n",
-              "            const text = document.getElementById(\"77311bdc-72cc-48cd-9a34-c2c502a3b4b7-text\");\n",
+              "            const text = document.getElementById(\"c6c8d5f4-a978-4a6a-ac10-8f49fc0f2244-text\");\n",
               "            text.innerText = \"Initialized Chromedriver\";\n",
               "        "
             ]
@@ -408,8 +415,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "{'PG': '弱空', 'PB': '中空', 'TA': '弱空', 'IF': '中空', 'SF': '中空', 'AP': '弱空', 'CU': '弱空', 'SR': '弱空', '热卷': '弱空', 'EB': '弱空', 'TF': '中性', 'IM': '中空', 'NI': '弱空', 'RR': '弱空', 'C': '中空', 'Y': '弱空', 'JD': '弱空', 'V': '强空', 'CS': '弱空', 'BU': '弱空', 'SM': '中空', 'EG': '中空', 'UR': '弱多', 'IC': '弱空', 'JM': '弱多', 'PP': '中空', 'SN': '弱空', '氧化铝': '弱空', 'CJ': '弱空', 'OI': '中空', 'M': '弱空', 'AU': '弱空', 'RB': '中性', 'CF': '弱空', 'A': '中空', 'LU': '弱多', 'AG': '弱多', 'RU': '强空', '20号胶': '中空', 'LC': '中空', 'L': '中空', 'PX': '弱多', 'B': '中性', 'FU': '弱空', 'J': '中性', 'TS': '弱空', 'PK': '中空', 'ZN': '中空', 'BC': '弱空', 'AL': '中性', 'SC': '中性', 'RM': '弱空', 'I': '弱多', 'SH': '弱空', 'PF': '弱空', 'IH': '中空', 'FG': '弱空', 'SP': '中空', 'P': '弱空', 'MA': '弱空', 'SS': '中空', 'EC': '中性', 'LH': '中空'}\n",
-            "rds work ok!\n"
+            "{'BU': '中空', 'SN': '弱空', 'PX': '中性', 'SH': '中空', 'FG': '弱空', '氧化铝': '弱空', 'CS': '弱空', 'PB': '中空', 'TS': '弱空', 'IC': '弱空', 'EG': '强空', 'OI': '强空', 'B': '中性', 'CF': '中空', 'LH': '中空', 'SS': '中空', 'JM': '中性', 'PG': '中空', 'CJ': '中性', 'IH': '中空', 'SC': '中空', 'RU': '弱空', 'SM': '强空', 'LC': '中空', 'ZN': '中空', 'TF': '中性', 'I': '中性', 'RR': '弱空', 'FU': '弱空', 'AP': '弱空', 'M': '弱空', 'SF': '强空', '热卷': '弱空', 'TA': '中空', 'J': '中空', 'Y': '弱空', 'A': '中空', 'LU': '弱空', 'PK': '弱空', 'NI': '弱空', 'AU': '中性', 'EC': '中空', 'AL': '弱空', 'RM': '弱空', 'CU': '中性', 'PP': '强空', 'MA': '弱空', 'AG': '中性', 'V': '强空', 'JD': '弱空', 'BC': '弱空', 'IM': '中空', 'L': '中空', 'EB': '中空', 'PF': '中空', 'C': '中空', 'SR': '中空', '20号胶': '中空', 'UR': '弱多', 'SP': '中空', 'P': '中空', 'IF': '中空', 'RB': '中性'}\n"
           ]
         }
       ]
