--- a/qhkch.ipynb
+++ b/qhkch.ipynb
@@ -297,9 +297,9 @@
       "cell_type": "code",
       "source": [
         "def sendredid(data):\n",
-        "  host = 'redis-12969.c1.ap-southeast-1-1.ec2.cloud.redislabs.com'\n",
-        "  port = 12969\n",
-        "  password = 'FEN0FcTv4FSKxjjMzUmAdmhMbgRthNqw'\n",
+        "  host = 'host'\n",
+        "  port = 0\n",
+        "  password = 'password'\n",
         "  channelname='qhkch'\n",
         "  try:\n",
         "    pool = redis.ConnectionPool(host=host,port=port,password=password)\n",
